fixing bag end popup on mobile

--- a/styles.css
+++ b/styles.css
@@ -371,7 +371,7 @@ a {
     }
     .popup7 .popuptext7{
         bottom: 32%;
-        left: 290%;
+        left: 90%;
     }
     .popup1 .popuptext, .popup2 .popuptext2, .popup3 .popuptext3{
         width: 200px;
